[Core] Add Logic to Emit Task Events to Event Aggregator (#53402)
This PR adds the logic to emit task events to event aggregator, mainly:
* Update the task event buffer logic to convert and send the ray event
to the event aggregator at the same time when the task events are
converted and sent to GCS
* Added 2 configs to control turning on/off the path to send to GCS and
the path to send to event aggregator
* Added test task event buffer tests for the ray event to aggregator
path

---------

Signed-off-by: Mengjin Yan <mengjinyan3@gmail.com>
Signed-off-by: myan <myan@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -207,6 +207,7 @@ ray_cc_library(
     srcs = ["task_event_buffer.cc"],
     hdrs = ["task_event_buffer.h"],
     deps = [
+        "//:event_aggregator_client",
         "//src/ray/common:asio",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
