--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -196,7 +196,9 @@ ray_cc_library(
     name = "event_aggregator_client",
     hdrs = ["src/ray/rpc/event_aggregator_client.h"],
     deps = [
+        ":event_aggregator_cc_rpc",
         ":grpc_client",
+        "//src/ray/common:status",
         "//src/ray/protobuf:events_event_aggregator_service_cc_proto",
         "//src/ray/util:logging",
         "@com_github_grpc_grpc//:grpc++",
@@ -387,6 +389,13 @@ ray_cc_library(
         "@boost//:thread",
         "@com_github_grpc_grpc//:grpc++",
     ],
+)
+
+cc_grpc_library(
+    name = "event_aggregator_cc_rpc",
+    srcs = ["//src/ray/protobuf:events_event_aggregator_service_proto"],
+    grpc_only = True,
+    deps = ["//src/ray/protobuf:events_event_aggregator_service_cc_proto"],
 )
 
 # pubsub.
