[Data][LLM] Fix broken processor/test_vllm_engine_proc.py test (#55120)
Test was broken on master for a while (due to lack of L4 GPU instances,
since vLLM certain version A10G is no longer supported)

We need to update test model as opt-125m is [lacking chat
template](https://huggingface.co/facebook/opt-125m/discussions/45#688c0d53b176681d5e69522d)

https://anyscale1.atlassian.net/browse/LLM-2273

---------

Signed-off-by: Linkun Chen <github@lkchen.net>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/python/ray/llm/tests/BUILD
+++ b/python/ray/llm/tests/BUILD
@@ -41,11 +41,7 @@ py_test_module_list(
     env = {
         "VLLM_FLASH_ATTN_VERSION": "2",
     },
-    files = glob(
-        ["batch/gpu/**/test_*.py"],
-        # TODO(ray-llm): fix this test: https://github.com/ray-project/ray/issues/52074
-        exclude = ["batch/gpu/processor/test_vllm_engine_proc.py"],
-    ),
+    files = glob(["batch/gpu/**/test_*.py"]),
     tags = [
         "exclusive",
         "gpu",
