--- a/src/ray/rpc/BUILD.bazel
+++ b/src/ray/rpc/BUILD.bazel
@@ -220,9 +220,8 @@ ray_cc_library(
     deps = [
         ":raylet_client_interface",
         ":retryable_grpc_client",
+        "//src/ray/common:ray_config",
         "//src/ray/common:task_common",
-        "//src/ray/flatbuffers:node_manager_generated",
-        "//src/ray/protobuf:common_cc_proto",
         "//src/ray/protobuf:node_manager_cc_grpc",
         "//src/ray/util:logging",
     ],
