--- a/src/ray/core_worker/task_submission/tests/BUILD.bazel
+++ b/src/ray/core_worker/task_submission/tests/BUILD.bazel
@@ -70,8 +70,8 @@ ray_cc_test(
         "//src/ray/common:test_utils",
         "//src/ray/core_worker:memory_store",
         "//src/ray/core_worker/task_submission:normal_task_submitter",
-        "//src/ray/raylet_client:raylet_client_interface",
         "//src/ray/rpc:core_worker_client",
+        "//src/ray/rpc:raylet_client_interface",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
