--- a/src/ray/gcs/gcs_server/BUILD.bazel
+++ b/src/ray/gcs/gcs_server/BUILD.bazel
@@ -78,7 +78,7 @@ ray_cc_library(
         "//src/ray/protobuf:gcs_service_cc_proto",
         "//src/ray/protobuf:ray_syncer_cc_proto",
         "//src/ray/pubsub:gcs_publisher",
-        "//src/ray/raylet_client:raylet_client_pool",
+        "//src/ray/rpc:raylet_client_pool",
         "//src/ray/stats:stats_metric",
         "//src/ray/util:event",
         "//src/ray/util:logging",
@@ -286,7 +286,7 @@ ray_cc_library(
         "//src/ray/common:task_common",
         "//src/ray/raylet/scheduling:cluster_resource_scheduler",
         "//src/ray/raylet/scheduling:scheduling_context",
-        "//src/ray/raylet_client:raylet_client_interface",
+        "//src/ray/rpc:raylet_client_interface",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
     ],
@@ -393,8 +393,8 @@ ray_cc_library(
         "//src/ray/common:task_common",
         "//src/ray/protobuf:gcs_service_cc_proto",
         "//src/ray/raylet/scheduling:cluster_lease_manager",
-        "//src/ray/raylet_client:raylet_client_interface",
         "//src/ray/rpc:core_worker_client",
+        "//src/ray/rpc:raylet_client_interface",
         "//src/ray/util:logging",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
@@ -516,11 +516,11 @@ ray_cc_library(
         "//src/ray/pubsub:gcs_publisher",
         "//src/ray/pubsub:publisher",
         "//src/ray/raylet/scheduling:scheduler",
-        "//src/ray/raylet_client:raylet_client_lib",
-        "//src/ray/raylet_client:raylet_client_pool",
         "//src/ray/rpc:core_worker_client",
         "//src/ray/rpc:grpc_server",
         "//src/ray/rpc:metrics_agent_client",
+        "//src/ray/rpc:raylet_client_lib",
+        "//src/ray/rpc:raylet_client_pool",
         "//src/ray/util:counter_map",
         "//src/ray/util:exponential_backoff",
         "//src/ray/util:network_util",
