--- a/src/ray/protobuf/public/BUILD.bazel
+++ b/src/ray/protobuf/public/BUILD.bazel
@@ -8,6 +8,8 @@ proto_library(
     srcs = ["events_base_event.proto"],
     deps = [
         ":events_actor_task_definition_event_proto",
+        ":events_actor_definition_event_proto",
+        ":events_actor_lifecycle_event_proto",
         ":events_driver_job_definition_event_proto",
         ":events_driver_job_execution_event_proto",
         ":events_task_definition_event_proto",
