--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -107,7 +107,6 @@ ray_cc_library(
         "//src/ray/common:ray_object",
         "//src/ray/common:status",
         "//src/ray/common:task_common",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
         "//src/ray/util:process",
     ],
 )
@@ -158,9 +157,10 @@ ray_cc_library(
 ray_cc_library(
     name = "actor_creator",
     hdrs = ["actor_creator.h"],
+    srcs = ["actor_creator.cc"],
+    visibility = [":__subpackages__"],
     deps = [
-        "//src/ray/common:ray_config",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
     ],
 )
 
