--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -105,6 +105,7 @@ ray_cc_library(
         ":common",
         "//src/ray/common:id",
         "//src/ray/common:ray_object",
+        "//src/ray/gcs/gcs_client:gcs_client_lib",
         "//src/ray/common:status",
         "//src/ray/common:task_common",
         "//src/ray/util:process",
@@ -160,7 +161,7 @@ ray_cc_library(
     srcs = ["actor_creator.cc"],
     visibility = [":__subpackages__"],
     deps = [
-        "//src/ray/gcs_client:gcs_client",
+        "//src/ray/gcs/gcs_client:gcs_client_lib",
     ],
 )
 
