--- a/.buildkite/dependencies.rayci.yml
+++ b/.buildkite/dependencies.rayci.yml
@@ -31,17 +31,6 @@ steps:
     key: raydepsets_compile_llm_dependencies
     tags: always
     instance_type: small
-    commands:
-      - echo "--- which python ---"
-      - which python
-      - echo "--- python --version ---"
-      - python --version
-      - echo "--- uv python list ---"
-      - uv python list
-      - echo "--- uv venv --python 3.11 ---"
-      - uv venv --python 3.11
-      - source .venv/bin/activate
-      - echo "--- ./ci/compile_llm_requirements.sh ---"
-      - ./ci/compile_llm_requirements.sh
+    command: ./ci/test_compile_llm_requirements.sh
     job_env: min-allpython
     depends_on: min-allpython
