--- a/python/ray/serve/tests/BUILD.bazel
+++ b/python/ray/serve/tests/BUILD.bazel
@@ -33,13 +33,17 @@ py_test_module_list(
 # Small tests.
 py_test_module_list(
     size = "small",
+    env = {
+        "RAY_SERVE_REPLICA_AUTOSCALING_METRIC_PUSH_INTERVAL_S": "1",
+        "RAY_SERVE_REPLICA_AUTOSCALING_METRIC_RECORD_INTERVAL_S": "2",
+        "RAY_SERVE_RECORD_AUTOSCALING_STATS_TIMEOUT_S": "3",
+    },
     files = [
         "test_advanced.py",
         "test_cluster_node_info_cache.py",
         "test_constructor_failure.py",
         "test_controller.py",
         "test_custom_metrics.py",
-        "test_custom_metrics_non_default.py",
         "test_deployment_version.py",
         "test_enable_task_events.py",
         "test_expected_versions.py",
