--- a/release/BUILD.bazel
+++ b/release/BUILD.bazel
@@ -311,7 +311,7 @@ py_library(
         "ray_release/schema.json",
         "//doc:deployment_serve_llm_example_configs",
         "//doc:example_configs",
-        "//doc/source/train/examples/pytorch/distributing-pytorch/ci:ci_yamls"
+        "//doc/source/train/examples/pytorch/distributing-pytorch/ci:ci_yamls",
     ],
     imports = ["."],
     visibility = ["//visibility:public"],
@@ -752,12 +752,12 @@ py_binary(
 py_binary(
     name = "custom_byod_build_init",
     srcs = ["ray_release/scripts/custom_byod_build_init.py"],
+    data = [
+        "release_tests.yaml",
+        "release_data_tests.yaml",
+    ],
     exec_compatible_with = ["//:hermetic_python"],
     deps = [
         ":ray_release",
     ],
-    data = [
-        "release_tests.yaml",
-        "release_data_tests.yaml",
-    ]
 )
