--- a/ci/raydepsets/rayllm.depsets.yaml
+++ b/ci/raydepsets/rayllm.depsets.yaml
@@ -67,3 +67,35 @@ depsets:
       - python/requirements.txt
       - python/requirements/llm/llm-requirements.txt
     output: python/deplocks/llm/rayllm_${PYTHON_VERSION}_${CUDA_CODE}.lock
+
+# Entity recognition with LLMs example depset - subset from RayLLM dependencies. (to get rid of vllm constraint)
+  - name: subset_llm_example_${PYTHON_VERSION}_${CUDA_CODE}
+    source_depset: compiled_ray_llm_depset_${PYTHON_VERSION}_${CUDA_CODE}
+    operation: subset
+    requirements:
+      - python/requirements.txt
+    output: python/deplocks/llm/llm_subset_${PYTHON_VERSION}_${CUDA_CODE}.lock
+    override_flags:
+      - --extra-index-url https://download.pytorch.org/whl/${CUDA_CODE}
+    append_flags:
+      - --python-version=3.11
+      - --python-platform=linux
+    build_arg_sets:
+      - cu128
+
+# Entity recognition with LLMs example depset - subset from RayLLM dependencies. (to get rid of vllm constraint)
+  - name: entity_recognition_with_llms_${PYTHON_VERSION}_${CUDA_CODE}
+    depsets:
+      - subset_llm_example_${PYTHON_VERSION}_${CUDA_CODE}
+    operation: expand
+    requirements:
+      - doc/source/ray-overview/examples/entity-recognition-with-llms/requirements.txt
+    output: doc/source/ray-overview/examples/entity-recognition-with-llms/llm-example_${PYTHON_VERSION}_${CUDA_CODE}.lock
+    override_flags:
+      - --extra-index-url https://download.pytorch.org/whl/${CUDA_CODE}
+    append_flags:
+      - --python-version=3.11
+      - --python-platform=linux
+      - --prerelease=allow
+    build_arg_sets:
+      - cu128
