--- a/src/ray/protobuf/public/BUILD.bazel
+++ b/src/ray/protobuf/public/BUILD.bazel
@@ -97,7 +97,6 @@ cc_proto_library(
 )
 
 proto_library(
-<<<<<<< HEAD
     name = "events_actor_definition_event_proto",
     srcs = ["events_actor_definition_event.proto"],
 )
@@ -112,7 +111,10 @@ proto_library(
     srcs = ["events_actor_lifecycle_event.proto"],
     deps = [
         "//src/ray/protobuf:common_proto",
-=======
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+proto_library(
     name = "events_node_definition_event_proto",
     srcs = ["events_node_definition_event.proto"],
 )
@@ -126,19 +128,17 @@ proto_library(
     name = "events_node_lifecycle_event_proto",
     srcs = ["events_node_lifecycle_event.proto"],
     deps = [
->>>>>>> upstream/master
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
 
 cc_proto_library(
-<<<<<<< HEAD
     name = "events_actor_lifecycle_event_cc_proto",
     deps = [":events_actor_lifecycle_event_proto"],
-=======
+)
+cc_proto_library(
     name = "events_node_lifecycle_event_cc_proto",
     deps = [":events_node_lifecycle_event_proto"],
->>>>>>> upstream/master
 )
 
 proto_library(
