--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -158,10 +158,20 @@ ray_cc_library(
 
 ray_cc_library(
     name = "actor_creator",
+    srcs = ["actor_creator.cc"],
     hdrs = ["actor_creator.h"],
+    visibility = [":__subpackages__"],
     deps = [
-        "//src/ray/common:ray_config",
         "//src/ray/gcs/gcs_client:gcs_client_lib",
+    ],
+)
+
+ray_cc_library(
+    name = "fake_actor_creator",
+    hdrs = ["fake_actor_creator.h"],
+    visibility = [":__subpackages__"],
+    deps = [
+        ":actor_creator",
     ],
 )
 
