--- a/release/release_data_tests.yaml
+++ b/release/release_data_tests.yaml
@@ -580,6 +580,37 @@
     timeout: 3600
     script: python batch_inference_hetero/main.py {{args}}
 
+- name: text_embedding_{{case}}
+  frequency: manual
+
+  matrix:
+    setup:
+      case: []
+      cluster_type: []
+      args: []
+    adjustments:
+      - with:
+          case: fixed_size
+          cluster_type: fixed_size
+          args: --inference-concurrency 100 100
+      - with:
+          case: autoscaling
+          cluster_type: autoscaling
+          args: --inference-concurrency 1 100
+      - with:
+          case: fixed_size_chaos
+          cluster_type: fixed_size
+          args: --inference-concurrency 100 100 --chaos
+
+  cluster:
+    cluster_compute: text_embedding/{{cluster_type}}_cluster_compute.yaml
+    byod:
+      type: cu123
+      post_build_script: byod_install_text_embedding.sh
+
+  run:
+    timeout: 3600
+    script: python text_embedding/main.py {{args}}
 
 ##############
 # TPCH Queries
