--- a/src/ray/common/cgroup2/BUILD.bazel
+++ b/src/ray/common/cgroup2/BUILD.bazel
@@ -1,40 +1,13 @@
 load("//bazel:ray.bzl", "ray_cc_library")
 
-config_setting(
-    name = "is_linux",
-    constraint_values = ["@platforms//os:linux"],
-)
-
-# Public targets.
-ray_cc_library(
-    name = "cgroup_manager",
-    srcs = select({
-        ":is_linux": ["cgroup_manager.cc"],
-        "//conditions:default": ["noop_cgroup_manager.cc"],
-    }),
-    hdrs = ["cgroup_manager.h"],
-    visibility = ["//visibility:public"],
-    deps = [
-        ":cgroup_driver_interface",
-        ":cgroup_manager_interface",
-        "//src/ray/common:status",
-        "//src/ray/common:status_or",
-    ] + select({
-        ":is_linux": [
-            ":scoped_cgroup_operation",
-            "//src/ray/util:logging",
-            "@com_google_absl//absl/strings",
-        ],
-        "//conditions:default": [],
-    }),
-)
-
 ray_cc_library(
     name = "cgroup_driver_interface",
     hdrs = [
         "cgroup_driver_interface.h",
     ],
-    visibility = ["//visibility:public"],
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
     deps = [
         "//src/ray/common:status",
         "//src/ray/common:status_or",
@@ -46,10 +19,32 @@ ray_cc_library(
     hdrs = [
         "cgroup_manager_interface.h",
     ],
-    visibility = ["//visibility:public"],
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
     deps = [
         "//src/ray/common:status",
         "//src/ray/common:status_or",
+    ],
+)
+
+ray_cc_library(
+    name = "cgroup_manager",
+    srcs = ["cgroup_manager.cc"],
+    hdrs = [
+        "cgroup_manager.h",
+        "scoped_cgroup_operation.h",
+    ],
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
+    deps = [
+        ":cgroup_driver_interface",
+        ":cgroup_manager_interface",
+        "//src/ray/common:status",
+        "//src/ray/common:status_or",
+        "//src/ray/util:logging",
+        "@com_google_absl//absl/strings",
     ],
 )
 
@@ -62,7 +57,6 @@ ray_cc_library(
     target_compatible_with = [
         "@platforms//os:linux",
     ],
-    visibility = ["//visibility:public"],
     deps = [
         ":cgroup_driver_interface",
         "//src/ray/common:status",
@@ -70,18 +64,6 @@ ray_cc_library(
         "//src/ray/util:logging",
         "@com_google_absl//absl/strings",
     ],
-)
-
-# Private Targets.
-ray_cc_library(
-    name = "scoped_cgroup_operation",
-    hdrs = [
-        "scoped_cgroup_operation.h",
-    ],
-    target_compatible_with = [
-        "@platforms//os:linux",
-    ],
-    visibility = [":__subpackages__"],
 )
 
 ray_cc_library(
@@ -92,7 +74,6 @@ ray_cc_library(
     target_compatible_with = [
         "@platforms//os:linux",
     ],
-    visibility = [":__subpackages__"],
     deps = [
         ":cgroup_driver_interface",
         "//src/ray/common:status",
@@ -106,7 +87,6 @@ ray_cc_library(
     target_compatible_with = [
         "@platforms//os:linux",
     ],
-    visibility = [":__subpackages__"],
     deps = [
         "//src/ray/common:id",
         "//src/ray/common:status",
