--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -38,7 +38,7 @@ ray_cc_library(
         "//src/ray/common/cgroup:constants",
         "//src/ray/core_worker/task_execution:task_receiver",
         "//src/ray/core_worker/task_submission:normal_task_submitter",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client_lib",
         "//src/ray/ipc:raylet_ipc_client",
         "//src/ray/protobuf:pubsub_cc_proto",
         "//src/ray/pubsub:publisher",
@@ -105,7 +105,7 @@ ray_cc_library(
         "//src/ray/common:id",
         "//src/ray/common:ray_object",
         "//src/ray/common:status",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client_lib",
         "//src/ray/util:process",
     ],
 )
@@ -157,7 +157,6 @@ ray_cc_library(
     name = "actor_creator",
     srcs = ["actor_creator.cc"],
     hdrs = ["actor_creator.h"],
-    srcs = ["actor_creator.cc"],
     visibility = [":__subpackages__"],
     deps = [
         "//src/ray/gcs_client:gcs_client",
@@ -187,7 +186,7 @@ ray_cc_library(
         "//src/ray/common:protobuf_utils",
         "//src/ray/common:task_common",
         "//src/ray/core_worker/task_submission:actor_task_submitter",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client_lib",
         "//src/ray/protobuf:core_worker_cc_proto",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_googletest//:gtest_prod",
@@ -237,7 +236,7 @@ ray_cc_library(
         "//src/ray/common:id",
         "//src/ray/common:protobuf_utils",
         "//src/ray/common:task_common",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client_lib",
         "//src/ray/protobuf:export_task_event_cc_proto",
         "//src/ray/protobuf:gcs_cc_proto",
         "//src/ray/rpc:event_aggregator_client",
