--- a/ci/raydepsets/rayimg.depsets.yaml
+++ b/ci/raydepsets/rayimg.depsets.yaml
@@ -16,7 +16,7 @@ build_arg_sets:
 depsets:
   - name: ray_img_depset_${PYTHON_SHORT}
     packages:
-      - ray[all]==100.0.0-dev
+      - ray[all]==100.0.0.dev0
     constraints:
       - python/requirements_compiled.txt
     output: python/deplocks/ray_img/ray_img_py${PYTHON_SHORT}.lock
@@ -29,3 +29,41 @@ depsets:
       - py310
       - py311
       - py312
+    pre_hooks:
+      - ci/raydepsets/pre_hooks/build-placeholder-wheel.sh ${PYTHON_VERSION}
+
+  - name: ray_base_extra_testdeps_${PYTHON_SHORT}
+    operation: expand
+    requirements:
+      - release/ray_release/byod/requirements_byod_${PYTHON_VERSION}.in
+      - docker/base-deps/requirements.in
+      - docker/base-extra/requirements.in
+    constraints:
+      - python/requirements_compiled.txt
+    depsets:
+      - ray_img_depset_${PYTHON_SHORT}
+    output: release/ray_release/byod/ray_base_extra_testdeps_py${PYTHON_VERSION}.lock
+    append_flags:
+      - --python-version=${PYTHON_VERSION}
+    build_arg_sets:
+      - py39
+      - py310
+      - py311
+      - py312
+
+  - name: ray_ml_base_extra_testdeps_${PYTHON_SHORT}
+    operation: expand
+    requirements:
+      - release/ray_release/byod/requirements_ml_byod_${PYTHON_VERSION}.in
+      - docker/base-deps/requirements.in
+      - docker/base-extra/requirements.in
+    constraints:
+      - python/requirements_compiled.txt
+    depsets:
+      - ray_img_depset_${PYTHON_SHORT}
+    output: release/ray_release/byod/ray_ml_base_extra_testdeps_py${PYTHON_VERSION}.lock
+    append_flags:
+      - --python-version=${PYTHON_VERSION}
+    build_arg_sets:
+      - py39
+      - py310
